--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
+        "laravel-vue-pagination": "^4.1.0",
         "vue-router": "^4.0.13"
     }
 }
