--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vue": "^3.3.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.2.3",
         "laravel-vue-pagination": "^4.1.0",
         "vue-router": "^4.0.13"
